--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -10,7 +10,7 @@
 
 	@media(max-width: 800px) {
 		 margin-bottom: 0;
-		 background: url("https://hackers.nyc3.digitaloceanspaces.com/head.jpg") center center;
+		 background: url("../images/head2.jpg") center center;
 		 background-size: cover;
 	}
 
