--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -6,10 +6,9 @@
   position: relative;
   width: auto;
   padding: 0;
-  background: @theme-color;
+  background: #042149;
   z-index: 100;
   box-shadow: 0 0 5pc #083880;
-  border-bottom: 1px solid #2098bd;
 
   @media(max-width: 800px) {
     margin: auto;
