--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -5,7 +5,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-- start header -->
 <nav class="main-navigation">
-		<a class="mobile-branding" href="{{@blog.url}}"><img src="https://hackers.nyc3.digitaloceanspaces.com/logowhite.png"></a>
+		<a class="mobile-branding" href="{{@blog.url}}"><img src="../mobilelogo.png"></a>
 		{{navigation}}
 </nav>
 <header class="main-header videoHeader">
