--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -11,7 +11,7 @@
 	@media(max-width: 800px) {
 		 margin-bottom: 0;
 		 background: url("../images/head2.jpg") center center;
-		 background-size: cover;
+		 background-size: cover !important;
 	}
 
 	.branding {
@@ -26,7 +26,7 @@
 		height: fit-content;
 		z-index: 100;
 
-		@media(max-width: 600px) {
+		@media(max-width: 800px) {
 			 width: 239px;
 		}
 
@@ -172,6 +172,7 @@
 				@media(max-width: 800px) {
 					padding: 0;
 					font-weight: 500;
+					font-size: 16px;
 				}
 			}
 
