--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -9,7 +9,7 @@
 	padding: 35px 10%;
 	color: white;
 	margin-top: 30px;
-	background-color: #3c465a;
+	background-color: #0d193c;
 	box-shadow: inset 0 1px 6px 0 rgba(44,50,63,0.41);
 	display: flex;
 	justify-content: space-around;
@@ -66,7 +66,7 @@
 				border: 0;
 		    border-radius: 2px;
 		    color: #fff;
-		    background: #3d888c;
+		    background: #18809e;
 		    padding: 5px 12px;
 		    display: inline-block;
 		    height: fit-content;
