--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -108,7 +108,7 @@
           margin-right:12px;
 
           a {
-            font-size:12px;
+            font-size:12px !important;
           }
         }
       }
