--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -120,7 +120,7 @@
         &:hover {
           &::before,
           a {
-            color: #11004e;
+            color: @theme-color;
             cursor: pointer;
           }
         }
