--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -188,6 +188,10 @@
 				&.author-mobile {
 					display:none;
 
+					span {
+						 text-transform: capitalize;
+					}
+
 					@media (max-width: 600px) {
 						display:flex;
 					}
