--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -36,12 +36,12 @@
 font-family: "Font Awesome 5 Pro";
 font-weight: normal;
 font-style : normal;
-       src : url("https://maxcdn.bootstrapcdn.com/font-awesome/5.1.1/fonts/fontawesome-webfont.eot?v=5.1.1");
-       src : url("https://maxcdn.bootstrapcdn.com/font-awesome/5.1.1/fonts/fontawesome-webfont.eot?#iefix&v=5.1.1") format("embedded-opentype"),
-             url("https://maxcdn.bootstrapcdn.com/font-awesome/5.1.1/fonts/fontawesome-webfont.woff2?v=5.1.1") format("woff2"),
-             url("https://maxcdn.bootstrapcdn.com/font-awesome/5.1.1/fonts/fontawesome-webfont.woff?v=5.1.1") format("woff"),
-             url("https://maxcdn.bootstrapcdn.com/font-awesome/5.1.1/fonts/fontawesome-webfont.ttf?v=5.1.1") format("truetype"),
-             url("https://maxcdn.bootstrapcdn.com/font-awesome/5.1.1/fonts/fontawesome-webfont.svg?v=5.1.1#fontawesomeregular") format("svg");
+       src : url("https://pro.fontawesome.com/releases/v5.3.1/fonts/fontawesome-webfont.eot?v=5.3.1");
+       src : url("https://pro.fontawesome.com/releases/v5.3.1/fonts/fontawesome-webfont.eot?#iefix&v=5.3.1") format("embedded-opentype"),
+             url("https://pro.fontawesome.com/releases/v5.3.1/fonts/fontawesome-webfont.woff2?v=5.3.1") format("woff2"),
+             url("https://pro.fontawesome.com/releases/v5.3.1/fonts/fontawesome-webfont.woff?v=5.3.1") format("woff"),
+             url("https://pro.fontawesome.com/releases/v5.3.1/fonts/fontawesome-webfont.ttf?v=5.3.1") format("truetype"),
+             url("https://pro.fontawesome.com/releases/v5.3.1/fonts/fontawesome-webfont.svg?v=5.3.1#fontawesomeregular") format("svg");
 }
 @font-face {font-family: 'AvenirNextLTPro-Light';src: url('../fonts/37415B_0_0.eot');src: url('../fonts/37415B_0_0.eot?#iefix') format('embedded-opentype'),url('../fonts/37415B_0_0.woff2') format('woff2'),url('../fonts/37415B_0_0.woff') format('woff'),url('../fonts/37415B_0_0.ttf') format('truetype');}
 @font-face {font-family: 'AvenirNextLTPro-Medium';src: url('../fonts/37415B_1_0.eot');src: url('../fonts/37415B_1_0.eot?#iefix') format('embedded-opentype'),url('../fonts/37415B_1_0.woff2') format('woff2'),url('../fonts/37415B_1_0.woff') format('woff'),url('../fonts/37415B_1_0.ttf') format('truetype');}
