tags, hover states, styles etc

--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -36,6 +36,7 @@
 
 			&:hover {
 				cursor: pointer;
+				opacity: .8;
 			}
 		}
 	}
@@ -242,6 +243,11 @@
 	height: 40px;
 	float: left;
 	margin: 15px;
+
+	&:hover {
+		cursor: pointer;
+		opacity: .8;
+	}
 
 	img {
 		 width: 100%;
