--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -34,6 +34,13 @@
 
   .logo {
         height: 42px;
+        transition: all .3s easeout;
+
+        &:hover {
+   			 cursor: pointer;
+   			 opacity: .8;
+   		 }
+
       img {
           width: 200px;
       }
