post footer links and tags

--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -16,12 +16,19 @@
 
 	.tag-list {
 		width:40%;
+		width: 40%;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-evenly;
+		align-items: flex-start;
+
 		a {
 			color: @text-post-header;
-			background: #f2f3f5;
-			padding: 10px 11px;
-			font-size: .85em;
-			margin-right: 15px;
+	    background: #f2f3f5;
+	    padding: 3px 8px;
+	    font-size: .8em;
+	    margin-bottom: 8px;
+			margin-right: 8px;
 		}
 
 
@@ -132,7 +139,7 @@
 
 	.share {
 		padding-left: 0;
-		max-width: 450px;
+		max-width: 400px;
 		width: 65%;
 		min-width: 220px;
 
