video min height

--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -62,6 +62,7 @@
     bottom: 0;
     background-size: cover;
     overflow: hidden;
+		min-height: 235px;
 
 		@media(max-width: 800px){
 			display: none !important;
