mobile post footer

--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -28,7 +28,8 @@
 		transition: all .3s easeout;
 
 		@media(max-width: 800px) {
-			 width: 239px;
+			width: 228px;
+	 		height: 77px;
 		}
 
 		img {
