--- a/post.hbs
+++ b/post.hbs
@@ -33,7 +33,7 @@
 								<a href="{{url}}" class="meta-item author mobile"><img src="{{img_url profile_image}}" alt="Author image" class="avi"><span>{{slug}}</span></a>
 							{{/if}}
 						{{/primary_author}}
-						<span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMMM DD"}}</span></span>
+							<span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMM Do"}}</span></span>
 					</div>
 
 
