--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -28,9 +28,9 @@
 	<!-- scripts -->
 	<script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
 	<script src="{{asset "/js/main.min.js"}}"></script>
-	
-	{{#has author="Matt Alhonte"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}
 
+	{{#has author="Matt Alhonte"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}
+	{{> seocard }}
 
 
 </body>
