post meta styles

--- a/post.hbs
+++ b/post.hbs
@@ -40,7 +40,7 @@
 					{{#has tag="Roundup"}}
 					<div class="post-roundup-blurb">
 						<div class="blurb-icon"></div>
-						<p>Each night resident scientist Snkia emerges from the shadows bearing gifts for human and robot-kind. Frantic research summed up in just a few choice hyperlinks, only on Lynx Roundup.</p>
+						<p>Scientist Snkia escapes from his lab every night to warn humanity of his findings. He is no madman... he is Legend. These links are his gifts.</p>
 					</div>
 					{{/has}}
 
