--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -73,6 +73,9 @@
 
 			@media(max-width:800px) {
 				  width: fit-content !important;
+				}
+
+			@media(max-width:600px) {
 					padding: 6px 10px 0!important;
 			}
 
@@ -83,6 +86,7 @@
 
 				@media(max-width:800px) {
 					padding: 0;
+					height: fit-content;
 				}
 			}
 
