--- a/src/less/post.less
+++ b/src/less/post.less
@@ -152,7 +152,7 @@
 
 		.tags {
 			 padding: 5px 10px;
-			 height: 30px;
+			 height: 25px;
 
 			 @media(max-width: 600px){
 				 font-size: .9em;
@@ -188,7 +188,7 @@
 		.meta-item {
 			margin: 0 50px 0 0;
 			float: left;
-			font-size: 1.3em;
+			font-size: 1.2em;
 			display: flex;
 			align-items: center;
 			text-transform: capitalize;
@@ -278,7 +278,7 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		min-height: 78px;
+		min-height: 50px;
 		@media(max-width: 800px) {
 			margin: 30px 40px;
 		}
@@ -287,7 +287,7 @@
 			border-bottom: 0;
 			border-top: 0;
 			padding: 15px 20px;
-			margin: 15px 30px 30px;
+			margin: 25px 30px 30px;
 			width: auto;
 		}
 
@@ -717,8 +717,10 @@
 	}
 
 	.featured-media {
+		line-height: 1;
 		img {
 			width: 100%;
+			line-height: 1;
 		}
 
 		a {
