--- a/src/less/post.less
+++ b/src/less/post.less
@@ -947,6 +947,10 @@
 }
 }
 
+.kg-embed-card > iframe {
+	    width: 100% !important;
+}
+
 .kg-width-wide {
 	max-height: 550px;
 	border: 1px solid #eaeaea;
