--- a/src/less/post.less
+++ b/src/less/post.less
@@ -947,8 +947,12 @@
 }
 }
 
+.kg-embed-card {
+	width: 100%;
+}
+
 .kg-embed-card > iframe {
-	    width: 100% !important;
+			margin:auto;
 }
 
 .kg-width-wide {
