--- a/src/less/post.less
+++ b/src/less/post.less
@@ -765,12 +765,13 @@
 		}
 
 		.kg-embed-card {
-			width: 100%;
+			width: 100% !important;
 			margin:20px auto;
 		}
 
 		.kg-embed-card > iframe {
 				margin:auto;
+				width: 100% !important;
 		}
 
 		.kg-width-wide {
@@ -794,7 +795,8 @@
 			margin: 0;
 			display: block;
 			margin: 0 auto 30px !important;
-			height: 400px;
+			max-height: 400px;
+
 
 			&.instagram-media {
 				max-width: 400px !important;
