--- a/src/less/post.less
+++ b/src/less/post.less
@@ -795,7 +795,7 @@
 			margin: 0;
 			display: block;
 			margin: 0 auto 30px !important;
-			max-height: 400px;
+			min-height: 400px;
 
 
 			&.instagram-media {
@@ -811,12 +811,6 @@
 
 		.twitter-tweet {
 			margin: 20px auto;
-			width: 100% !important;
-
-			.EmbeddedTweet,
-			.EmbeddedTweet-tweet {
-				width: 100% !important;
-			}
 		}
 
 		img {
