--- a/src/less/post.less
+++ b/src/less/post.less
@@ -765,7 +765,9 @@
 		}
 
 		.kg-embed-card {
-			width: 100% !important;
+			margin: 20px auto;
+			background: #fafafa;
+			padding: 10px;
 			margin:20px auto;
 		}
 
