--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -2,7 +2,6 @@
 @import "mixin.less";
 
 .link-preview {
-  border: 1px solid #d2d2d2;
   padding: 0;
   transition: all 0.2s ease-out;
   border-radius: 2px;
@@ -25,13 +24,12 @@
     background-position-x: center;
     background-position-y: center;
     border-radius: 0;
-    border-right: 1px solid #d2d2d2;
     transition: all .2s easout;
+    /*background-color: white;*/
 
     @media(max-width: 800px) {
       width: 100%;
       height: 140px;
-      border-bottom: 1px solid #d2d2d2;
       border-radius: 0;
     }
   }
