--- a/src/less/post.less
+++ b/src/less/post.less
@@ -768,7 +768,7 @@
 			margin: 20px auto;
 			background: #fafafa;
 			padding: 10px;
-			margin:20px auto;
+			width: 100% !important;
 		}
 
 		.kg-embed-card > iframe {
