--- a/src/less/global.less
+++ b/src/less/global.less
@@ -5,13 +5,12 @@
 ====================================================*/
 body,
 html {
-	font-family: 'AvenirNextLTPro-Light', sans-serif;
+	font-family: 'AvenirNextLTPro-Regular', sans-serif;
 	font-size: 16px;
 	color: @text-color;
 	line-height: 1.75em;
 	background: @bg-color;
 	position: relative;
-	font-weight: 200;
 	margin:0;
 }
 
