--- a/src/less/post.less
+++ b/src/less/post.less
@@ -311,7 +311,7 @@
 
 		p {
 			line-height: 1.5 !important;
-			font-family: AvenirNextLTPro-Light;
+			font-family: 'AvenirNextLTPro-Regular';
 			color: #1a6948;
 			font-size: 1em;
 			width: auto;
@@ -592,7 +592,7 @@
 		}
 
 		a {
-			font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light';
+			font-family: 'AvenirNextLTPro-Regular';
 		}
 
 		blockquote {
