--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -136,7 +136,7 @@
 
 		a {
 			color: #5aa8bf;
-			font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light';
+			font-family: 'AvenirNextLTPro-Regular';
 		}
 
 		.meta-item {
