--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -16,3 +16,5 @@
 @black: #000000;					// Pure black
 @white: #FFFFFF;					// Pure White
 @text-post-header: #20809c;
+
+@base-url: 'https://hackersandslackers.com/';
