--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -6,7 +6,7 @@
   transition: all 0.2s ease-out;
   border-radius: 2px;
   margin: 20px auto 30px;
-  background: #fafafa;
+  background: #f5f5f5;
   display: flex;
   justify-content: space-between;
   overflow: hidden;
