--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: space-between;
   overflow: hidden;
+  box-shadow: 2px 2px 1px rgba(0, 0, 0, .1);
   transition: all .2s easout;
 
   @media(max-width: 800px) {
@@ -106,11 +107,6 @@
     color: #fff;
     cursor: pointer;
     text-decoration: none;
-    border: 1px solid @theme-color;
-
-    .preview-image {
-      border-color: @theme-color;
-    }
 
     a,
     h4,
