--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -20,8 +20,7 @@
 		height: 100%;
 		display: flex;
 		flex-wrap: wrap;
-		align-items: flex-start;
-		justify-items: center;
+		align-items: center;
 
 		a {
 			color: @text-post-header;
