--- a/default.hbs
+++ b/default.hbs
@@ -20,7 +20,7 @@
 	<!-- Fonts -->
 
 	{{! Scripts }}
-	<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.8/stitch.js"></script>
+	<script src="{{asset "/js/includes/stitch.min.js"}}"></script>
 	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
 	<script src="{{asset "/js/includes/swiper.min.js"}}"></script>
 	<script src="{{asset "/js/includes/secret.js"}}"></script>
