--- a/page.hbs
+++ b/page.hbs
@@ -11,7 +11,7 @@
 			<div class="col-md-8 main-content">
 				<!-- start post -->
 				{{#post}}
-				<article class="{{post_class}}">
+				<article class="page">
 					{{#if feature_image}}
 					<div class="featured-media">
 						<img src="{{feature_image}}" alt="{{{title}}}">
