--- a/src/less/page.less
+++ b/src/less/page.less
@@ -29,6 +29,12 @@
     }
   }
 
+  .main-header {
+    @media(max-width: 800px) {
+      display:none;
+    }
+  }
+
   .menu {
     @media(max-width: 800px) {
       padding: 0 !important;
@@ -93,6 +99,11 @@
         margin: 40px 30px 0;
       }
     }
+  }
+
+  .page {
+    background: white;
+    display: inline-block;
   }
 
   .post-content {
