--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -8,45 +8,42 @@
   padding: 0;
   background: #042149;
   z-index: 100;
-
   @media(max-width: 800px) {
     margin: auto;
     position: relative !important;
     width: auto;
     padding: 0 10px;
     height: 59px;
-    box-shadow: 0px 0px 5pc #083880;
   }
 
   .navcontain {
-    max-width:1000px;
-    margin:auto;
+    max-width: 1000px;
+    margin: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 15px 30px;
-
     @media(max-width: 800px) {
-      padding:0;
+      padding: 0;
     }
   }
 
   .logo {
-        height: 42px;
-        transition: all .3s easeout;
+    height: 42px;
+    transition: all 0.3s easeout;
 
-        &:hover {
-   			 cursor: pointer;
-   			 opacity: .8;
-   		 }
-
-      img {
-          width: 200px;
-      }
-      @media(max-width: 800px) {
-        display:none !important;
-      }
+    &:hover {
+      cursor: pointer;
+      opacity: 0.8;
     }
+
+    img {
+      width: 200px;
+    }
+    @media(max-width: 800px) {
+      display: none !important;
+    }
+  }
 
   .mobile-branding {
     height: 50px;
@@ -56,13 +53,12 @@
     z-index: 100;
     opacity: 1;
     display: none;
-
     @media(max-width: 800px) {
       margin: 8px !important;
       height: 40px;
       width: 40px;
       display: block;
-      }
+    }
   }
 
   nav {
@@ -83,7 +79,7 @@
         font-variant: normal;
         text-rendering: auto;
         -webkit-font-smoothing: antialiased;
-        color:white;
+        color: white;
         font-size: 12px;
         margin-right: 8px;
       }
@@ -104,17 +100,15 @@
         font-family: "Font Awesome 5 Pro";
         content: "\f15b";
       }
-
-
       @media(max-width: 600px) {
         width: 270px;
         overflow: hidden;
 
         li {
-          margin-right:12px;
+          margin-right: 12px;
 
           a {
-            font-size:12px !important;
+            font-size: 12px !important;
           }
         }
       }
@@ -131,7 +125,6 @@
           }
         }
 
-
         a {
           color: white;
           font-family: 'sofia-pro', san-serif;
@@ -140,7 +133,6 @@
           font-weight: 500;
           letter-spacing: 0.5px;
           transition: all 0.2s ease-out;
-
           @media(max-width: 600px) {
             font-size: 14px;
           }
