--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -57,12 +57,13 @@
 
 		.post-title {
 			font-size: 2.5em;
-			line-height: 1.1;
-			margin: 0;
+			line-height: .8;
+			margin: 0 0 25px 0;
 
 			@media(max-width: 600px) {
 				font-size: 2em;
 				line-height: .9;
+				margin: 0 0 15px 0;
 			}
 
 
@@ -180,7 +181,8 @@
 				span {
 					font-family: 'AvenirNextLTPro-Regular', 'AvenirNextLTPro-Light' !important;
 					color: #627d90;
-					font-size: 16px;
+					font-size: 17px;
+					line-height: 1;
 					overflow: hidden;
 			    white-space: nowrap;
 			    text-overflow: ellipsis;
@@ -239,6 +241,10 @@
 				display: inline-block;
 				margin-right: 10px;
 				border-radius: 50%;
+				
+				@media(max-width: 600px) {
+					margin-right: 15px;
+				}
 			}
 		}
 		@media(max-width: 800px) {
@@ -262,7 +268,7 @@
 		text-align: left;
 		display: flex;
 		justify-content: space-between;
-		padding: 0 0 10px;
+		padding: 10px 0 10px;
 		align-items: center;
 
 		.btn {
