--- a/post.hbs
+++ b/post.hbs
@@ -34,6 +34,7 @@
 							{{/if}}
 						{{/primary_author}}
 							<span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMM Do"}}</span></span>
+							<span class="readtime meta-item"><i class="fal fa-eye"></i> <span>{{reading_time}}</span></span>
 					</div>
 
 
