--- a/partials/cover-author.hbs
+++ b/partials/cover-author.hbs
@@ -33,11 +33,10 @@
 <script>
 $(document).ready(function(){
 	$.get(
-		ghost.url.api('posts', {limit: 'all', include: 'count.posts', filter: 'author:{{slug}}'}).done(function( data ) {
+		ghost.url.api('posts', {limit: 'all', include: 'count.posts', filter: 'author:{{slug}}'})).done(function( data ) {
 	    console.log( "Data Loaded: " + data );
 			$('.post-count').append(data.posts.length);
 		});
-	)
 });
 </script>
 
