--- a/partials/cover-author.hbs
+++ b/partials/cover-author.hbs
@@ -11,7 +11,7 @@
 		{{name}}
 	</h3>
 	<div class="meta-info">
-			<span class="post-count"><i class="fal fa-pencil"></i><a href="{{url}}">{{plural posts.total empty='No posts' singular='% post' plural='% posts'}}</a></span>
+			<span class="post-count"><i class="fal fa-pencil"></i><a href="{{url}}">{{plural posts.total empty='No posts' singular='% post' plural='% posts'}}</a></span><span> Posts</span>
 		{{#if location}}
 		<span class="loaction"><i class="fal fa-map-marker-alt"></i>{{location}}</span>
 		{{/if}}
