--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -66,7 +66,8 @@
 				border: 0;
 		    color: #fff;
 		    background: #18809e;
-		    padding: 5px 12px;
+				padding: 2px 10px;
+				font-size: .9em;
 		    display: inline-block;
 		    height: fit-content;
 		    width: fit-content;
