--- a/partials/widget-authorwebsite.hbs
+++ b/partials/widget-authorwebsite.hbs
@@ -11,7 +11,7 @@
     {{/if}}
 
 
-   <script>
+   <!--<script>
    authorsClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user => {
      console.log('logged in anonymously as user')
    });
@@ -35,5 +35,5 @@
    }
 
 
-   </script>
+ </script>-->
   <!-- end widget -->
