--- a/src/less/post.less
+++ b/src/less/post.less
@@ -32,12 +32,12 @@
 		line-height: 1.1;
 		display: block;
 		font-family: sofia-pro !important;
+		font-size: 2.2em;
 
 		@media(max-width: 800px) {
 			white-space: normal;
 			text-align: center !important;
 			font-weight: 700;
-			font-size: 2.2em;
 		}
 
 		@media(max-width: 600px) {
@@ -58,7 +58,7 @@
 	.excerpt {
 		font-weight: 100;
 		font-size: 1.3em;
-		margin-top: 20px;
+		margin-top: 15px;
 		margin-bottom: 0;
 		line-height: 1.2;
 
@@ -127,7 +127,7 @@
 	}
 
 	.post-meta {
-		margin: 0 80px;
+		margin: auto 80px 50px;
 		color: #9ea1ab;
 		font-size: 12px;
 		display: flex;
