--- a/src/less/post.less
+++ b/src/less/post.less
@@ -560,6 +560,7 @@
 					  max-width: 60px;
 						width: 106px;
 						padding: 10px 4px;
+						border-right: 1px solid #cdd1d6;
 				}
 				@media(max-width: 600px) {
 					font-size: 14px;
